--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -11,9 +11,14 @@
     <ul>
         <% skills.forEach(function(s,idx){%>
             <li>
+                <form action="/skills/<%= idx %>?_method=DELETE"
+                    class="delete-form" method="POST">
+                    <button type="submit">X</button>
+                  </form>
                 <a href="skills/<%= idx %>"><%= s.skill %></a>
                     - <%= s.learned ? 'Learned' : 'Not Learned' %></li>
         <% }) %>
     </ul>
+    <a href="/skills/new">Add Skill</a>
 </body>
 </html>
